--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,7 +27,7 @@
 }
 
 .bg-image-1 {
-    background-image: url('../images/FPK2023101845-transparent.png')!important;
+    background-image: url('../images/produk/FPK2023101845-transparent.png')!important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
     background-position: center !important;
@@ -68,4 +68,76 @@
     height: 100vh;
     width: 100%;
     z-index: 100;
+}
+
+.text-decoration-danger {
+    text-decoration-color: red !important;
+}
+
+.mh-50 {
+    max-height: 50vh!important;
+}
+
+.thumbnails {
+    min-width: 18rem!important;
+    min-height: min-content!important;
+    max-width: 20rem!important;
+    max-height: max-content!important;
+}
+
+.container-video {
+    position: relative;
+    display: flex;
+    width: max-content;
+    height: max-content;
+    justify-content: center;
+    align-items: center;
+}
+.container-video #video {
+    width: 600px;
+    height: 400px;
+    border-radius: 20px;
+}
+.container-video .controls {
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    opacity: 0.2;
+    transition: opacity 0.4s;
+}
+.container-video:hover .controls {
+    opacity: 1;
+}
+.container-video .controls button {
+    background: transparent;
+    color: #fff;
+    font-weight: bolder;
+    text-shadow: 2px 1px 2px #000;
+    border: none;
+    cursor: pointer;
+}
+.container-video .controls .timeline {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-right: 3px solid #ccc;
+    border-left: 3px solid #ccc;
+}
+.container-video .controls .timeline .bar{
+    background: rgb(1, 1, 65);
+    height: 4px;
+    flex: 1;
+}
+.container-video .controls .timeline .bar .inner{
+    background: #ccc;
+    width: 0%;
+    height: 100%;
+}
+
+.user-avatar {
+    width: 3rem!important;
+    height: 3rem!important;
 }
